--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "publishConfig": {
     "access": "public",
-    "provenance": false
+    "provenance": true
   },
   "scripts": {
     "prepack": "npm run build",
