--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@lexjs/eslint-plugin": "^1.1.2",
     "@types/node": "^22.10.7",
     "@types/yargs": "^17.0.33",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "prettier": "^3.4.2",
